--- a/style.css
+++ b/style.css
@@ -4,10 +4,44 @@ body{
 	color: #535353;
 	font-size: 15px;
 	line-height: 1.5;
-	background:#c1ff86;
+	text-align: center;
+
 }
+
+ul{
+	background-color: #88aa00;
+padding: 10px 20px;
+
+}
+
+li{
+list-style-type: none;
+display: inline;
+padding-right: 20px;
+}
+
+li a:link{
+	color: #ffffff
+}
+li a:visited{
+	color: #eeee00;
+
+}
+
+li a:hover{
+	:#000000;
+text-decoration:none;
+}
+
+#wrap{
+	width: 770px;
+	margin:0 auto;
+	text-align: left;
+}
+
+
 h2{
-	font-size: 185%;A
+	font-size: 185%;
 	border-left: 15pt solid #668800;
 	//border-top: 1px solid #009933; 
 	padding-left:10px; 
@@ -18,6 +52,7 @@ h3{
 	border: 1px solid #668800;
 	//border-top: 1px solid #668800; 
 	padding:5px; 
+	clear: left;
 }
 h4{
 	font-size: 124%;
@@ -27,6 +62,7 @@ address{
 	font-size: :85%; text-align: right; 
 	border-top: 1px solid #000000;
 	padding-top:10px;
+	clear: left;
 }
 
 table{
@@ -44,6 +80,11 @@ td{
 	border: 1px solid #999999; 
 	padding: 10px ; 
 	background-color: #cccccc;
+}
+
+.itemphoto{float: left;
+	margin-right: 20px;
+	margin-bottom: 50px;
 }
 
 
